--- a/ringen.html
+++ b/ringen.html
@@ -30,8 +30,8 @@
 </p>
 <ul>
     <li>Hobbit: En oväntad resa</li>
-    <li>Hobbiy: Smaugs ödemark</li>
-    <li>Hobbiy: Femhäraslaget</li>
+    <li>Hobbit: Smaugs ödemark</li>
+    <li>Hobbit: Femhäraslaget</li>
 
 </ul>
 <a href="filmer.html">FILMSIDAN</a>
